<resources>
    <string name="app_name">Lab7JoseAuyon201579</string>
    <string name="laboratorio_7" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buenos_d_as">Buenos días</string>
    <string name="example_gmai_com">example@gmai.com</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="actualizar_perfil1">Actualizar Perfil</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="nueva_cuenta">Nueva Cuenta</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="placeholder">placeholder</string>
    <string name="hola">Hola</string>
    <string name="necesitamos_que_actualices_tu_perfil">necesitamos que actualices tu perfil</string>
    <string name="perfil2">¡Necesitamos que actualices tu perfil!</string>
    <string name="laboratorio_71">Laboratorio 7</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="hint">hint</string>
    <string name="nuevo_usario_crea_tu_cuenta_aqu">¿Nuevo usario? ¡Crea tu cuenta aquí!</string>
</resources>